# raytracing

./: .gitignore  CMakeLists.txt  readme.md
data/: bumpmap.qdmg  heightfield.qdmg  kdtree_test.qdmg  lecture7.qdmg  window.qdmg
data/hw9/: axe_test.qdmg  dragon.qdmg  nonconvex.qdmg  testmesh.qdmg
src/: KDTree.cpp  KDTree.h  bbox.cpp  bbox.h  bitmap.cpp  bitmap.h  camera.cpp  camera.h  color.cpp  color.h  colors.cpp  colors.h  constants.h  environment.cpp  environment.h  geometry.cpp  geometry.h  heightfield.cpp  heightfield.h  light.cpp  light.h  main.cpp  matrix.cpp  matrix.h  mesh.cpp  mesh.h  meshdata.cpp  meshdata.h  random_generator.cpp  random_generator.h  ray.h  scene.cpp  scene.h  sdl.cpp  sdl.h  shading.cpp  shading.h  shadinghelper.cpp  shadinghelper.h  texture.cpp  (+7 more)
tools/OpenEXR-mingw/: Readme.txt
tools/OpenEXR-mingw/include/OpenEXR/: halfExport.h
tools/OpenEXR-mingw/lib/pkgconfig/: IlmBase.pc
